login or register page index.html, style.scss and main.ts

--- a/index.html
+++ b/index.html
@@ -1,13 +1,25 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + TS</title>
+    <title>Library DBMS</title>
   </head>
   <body>
-    <div id="app"></div>
+    <!-- <div id="app"></div> -->
+    <!-- <header></header> -->
+    <main class="container">
+      <section class="oldContainer">
+        <h1>Already a Member?</h1>
+        <div id="oldContainer__form"></div>
+      </section>
+      <section class="newContainer">
+        <h1>Become a Member</h1>
+        <div id="newContainer__form"></div>
+      </section>
+    </main>
+    <!-- <footer></footer> -->
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
