oldContainer, newContainer, searchContainer and resultContainer forms added

--- a/index.html
+++ b/index.html
@@ -18,6 +18,14 @@
         <h1>Become a Member</h1>
         <div id="newContainer__form"></div>
       </section>
+      <!-- <section class="searchContainer" style="display: none">
+        <h1>Library Book Search</h1>
+        <div id="searchContainer__form"></div>
+      </section>
+      <section class="resultContainer" style="display: none">
+        <h1>Library Search Results</h1>
+        <div id="resultContainer__form"></div>
+      </section> -->
     </main>
     <!-- <footer></footer> -->
     <script type="module" src="/src/main.ts"></script>
