--- a/index.html
+++ b/index.html
@@ -7,25 +7,12 @@
     <title>Library DBMS</title>
   </head>
   <body>
-    <!-- <div id="app"></div> -->
     <!-- <header></header> -->
     <main class="container">
-      <section class="oldContainer">
-        <h1>Already a Member?</h1>
-        <div id="oldContainer__form"></div>
-      </section>
-      <section class="newContainer">
-        <h1>Become a Member</h1>
-        <div id="newContainer__form"></div>
-      </section>
-      <!-- <section class="searchContainer" style="display: none">
-        <h1>Library Book Search</h1>
-        <div id="searchContainer__form"></div>
-      </section>
-      <section class="resultContainer" style="display: none">
-        <h1>Library Search Results</h1>
-        <div id="resultContainer__form"></div>
-      </section> -->
+      <section class="oldContainer"></section>
+      <section class="newContainer"></section>
+      <section class="searchContainer" style="display: none"></section>
+      <section class="resultContainer" style="display: none"></section>
     </main>
     <!-- <footer></footer> -->
     <script type="module" src="/src/main.ts"></script>
