major overhaul, displaySearchBooks, createBookCard, attachReserveButtonEvent, saveBookToDatabase and attachRemoveButtonEvent controlling resultContainer and reservationContainer workflow

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <main class="container">
       <section class="oldContainer"></section>
       <section class="newContainer"></section>
+      <section class="reservationContainer" style="display: none"></section>      
       <section class="searchContainer" style="display: none"></section>
       <section class="resultContainer" style="display: none"></section>
     </main>
